--- a/index.html
+++ b/index.html
@@ -40,17 +40,15 @@ This plugin is still under development, and updates are subject to my available 
 
       <h2>Features</h2>
 
-      <h3>Templates can now be found with symbol search</h3>
-      <h3>"Go To Declaration", now works across files</h3>
-      <h3>Now supporting rename refactoring to parameter and template names across files</h3>
-      <h3>Comments in template content that begin with '/*' are now captured as comments</h3>
-      <h3>Code folding for templates</h3>
+      <h3>Template and parameter name rename refactoring across files, within files</h3>
+      <h3>Symbol Search to find templates</h3>
+      <h3>Go To Declaration for parameters templates across files, within files</h3>
+      <h3>Comments recognition</h3>
+      <h3>Template Code folding</h3>
       <h3>Structure view shows templates and parameters</h3>
-      <h3>Go to declaration is now supported for parameters and template names in the same file</h3>
-      <h3>Highlight usages in file now supported for parameters and templates</h3>
-      <h3>Now supporting rename refactoring to parameter and template names within a single file</h3>
-      <h3>Added syntax highlight for function names</h3>
-      <h3>Error checking now provided (more to come)</h3>
+      <h3>Highlight parameter and template usage</h3>
+      <h3>Syntax highlight for function names</h3>
+      <h3>Error checking now provided</h3>
 
       <h2>License</h2>
       <p>Apache 2.0</p>
