--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <title>evenaglia/Non-Dairy-Soy-Plugin @ GitHub</title>
 
-  <link rel="stylesheet" type="text/css" href="main.css" />
+  <link rel="stylesheet" type="text/css" href="style/main.css" />
 
 </head>
 
