sample template soy

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 
   <title>evenaglia/Non-Dairy-Soy-Plugin @ GitHub</title>
 
+  <script type="text/javascript" src="javascript/jquery.1.2.1.js"></script>
+  <script type="text/javascript" src="javascript/jquery.lightbox-0.5.js"></script>
+
   <link rel="stylesheet" type="text/css" href="style/main.css" />
+  <link rel="stylesheet" type="text/css" href="style/jquery.lightbox-0.5.css" />
 
 </head>
 
