sample template soy

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <script type="text/javascript" src="javascript/jquery.1.2.1.js"></script>
   <script type="text/javascript" src="javascript/jquery.lightbox-0.5.js"></script>
+  <script type="text/javascript" src="javascript/main.js"></script>
 
   <link rel="stylesheet" type="text/css" href="style/main.css" />
   <link rel="stylesheet" type="text/css" href="style/jquery.lightbox-0.5.css" />
@@ -45,6 +46,13 @@ This plugin is still under development, and updates are subject to my available 
       <h2>Features</h2>
 
       <h3>Template and parameter name rename refactoring across files, within files</h3>
+      <p>
+          <a class="gallery" href="images/refactor_template1.png"><img src="images/refactor_template1.png" width="72" height="72" alt="" /></a>
+      </p>
+      <p>
+          <a class="gallery" href="images/refactor_template2.png"><img src="images/refactor_template2.png" width="72" height="72" alt="" /></a>
+      </p>
+
       <h3>Symbol Search to find templates</h3>
       <h3>Go To Declaration for parameters templates across files, within files</h3>
       <h3>Comments recognition</h3>
