symbol search screenshot

--- a/index.html
+++ b/index.html
@@ -47,13 +47,17 @@ This plugin is still under development, and updates are subject to my available 
 
       <h3>Template and parameter name rename refactoring across files, within files</h3>
       <p>
-          <a class="gallery" href="images/refactor_template1.png"><img src="images/refactor_template1.png" width="72" height="72" alt="" /></a>
+          <a class="gallery" href="images/refactor_template1.png"><img class="gallery-thumbnail" src="images/refactor_template1.png" alt="" /></a>
       </p>
       <p>
-          <a class="gallery" href="images/refactor_template2.png"><img src="images/refactor_template2.png" width="72" height="72" alt="" /></a>
+          <a class="gallery" href="images/refactor_template2.png"><img class="gallery-thumbnail" src="images/refactor_template2.png" alt="" /></a>
       </p>
 
       <h3>Symbol Search to find templates</h3>
+      <p>
+          <a class="gallery" href="images/symbol_search.png"><img class="gallery-thumbnail" src="images/symbol_search.png" alt="" /></a>
+      </p>
+
       <h3>Go To Declaration for parameters templates across files, within files</h3>
       <h3>Comments recognition</h3>
       <h3>Template Code folding</h3>
@@ -69,8 +73,6 @@ This plugin is still under development, and updates are subject to my available 
       <h2>Authors</h2>
       <p>Ed Venaglia<br/>
          Aron Racho</p>
-    
-
     
     <h2>Download</h2>
     <p>
