goto declaration screenshot

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@ This plugin is still under development, and updates are subject to my available 
       </p>
 
       <h3>Go To Declaration for parameters templates across files, within files</h3>
+      <p>
+          <a class="gallery" href="images/goto_declaration.png"><img class="gallery-thumbnail" src="images/goto_declaration.png" alt="" /></a>
+      </p>
+
       <h3>Comments recognition</h3>
       <h3>Template Code folding</h3>
       <h3>Structure view shows templates and parameters</h3>
