--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@ This plugin is still under development, and updates are subject to my available 
       </p>
 
       <h3>Comments recognition</h3>
+      <p>
+          <a class="gallery" href="images/comments.png"><img class="gallery-thumbnail" src="images/comments.png" alt="" /></a>
+      </p>
 
 
       <h3>Template Code folding</h3>
