code folding screenshot

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@ This plugin is still under development, and updates are subject to my available 
 
 
       <h3>Template Code folding</h3>
+      <p>
+          <a class="gallery" href="images/template_code_folding.png"><img class="gallery-thumbnail" src="images/template_code_folding.png" alt="" /></a>
+      </p>
+
       <h3>Structure view shows templates and parameters</h3>
       <h3>Highlight parameter and template usage</h3>
       <h3>Syntax highlight for function names</h3>
