code folding screenshot

--- a/index.html
+++ b/index.html
@@ -74,10 +74,23 @@ This plugin is still under development, and updates are subject to my available 
           <a class="gallery" href="images/template_code_folding.png"><img class="gallery-thumbnail" src="images/template_code_folding.png" alt="" /></a>
       </p>
 
-      <h3>Structure view shows templates and parameters</h3>
-      <h3>Highlight parameter and template usage</h3>
-      <h3>Syntax highlight for function names</h3>
-      <h3>Error checking now provided</h3>
+      <h3>Structure view</h3>
+      <p>
+          <a class="gallery" href="images/structure_view.png"><img class="gallery-thumbnail" src="images/structure_view.png" alt="" /></a>
+      </p>
+
+      <h3>Template and parameter usage highlighting</h3>
+      <p>
+          <a class="gallery" href="images/highlight.png"><img class="gallery-thumbnail" src="images/highlight.png" alt="" /></a>
+      </p>
+
+      <h3>Error checking</h3>
+      <p>
+          <a class="gallery" href="images/errors.png"><img class="gallery-thumbnail" src="images/errors.png" alt="" /></a>
+      </p>
+
+      <h3>Function name syntax highlighting</h3>
+      TBD
 
       <h2>License</h2>
       <p>Apache 2.0</p>
