--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@ This plugin is still under development, and updates are subject to my available 
       </p>
 
       <h3>Function name syntax highlighting</h3>
-      TBD
+      <p>
+          <a class="gallery" href="images/syntax_highlighting.png"><img class="gallery-thumbnail" src="images/syntax_highlighting.png" alt="" /></a>
+      </p>
 
       <h2>License</h2>
       <p>Apache 2.0</p>
